--- a/src/app/components/instruction/module/instruction.module.component.html
+++ b/src/app/components/instruction/module/instruction.module.component.html
@@ -20,7 +20,7 @@
         </div>
         <div>
           <a
-            [routerLink]="['/']">
+            [routerLink]="['/instruction/category', instruction.category.id]">
             {{instruction.category.name}}
           </a>
         </div>
