--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -17,9 +17,7 @@
           </div>
         </div>
         <div class="card-content">
-          <div class="row">
-
-          </div>
+          <medal-module [user]="user"></medal-module>
         </div>
       </div>
 
