--- a/src/app/components/user/profile/watch/profile.watch.component.css
+++ b/src/app/components/user/profile/watch/profile.watch.component.css
@@ -16,3 +16,15 @@ figure.card-profile-image {
   cursor: pointer;
   margin: 0;
 }
+
+.teaser {
+  letter-spacing: 3px;
+  font-size: 24px;
+  margin-bottom: 40px;
+  font-family: 'ProximaNova Semibold',sans-serif;
+  text-align: center;
+  margin-top: 20px;
+  text-transform: uppercase;
+  position: relative;
+  line-height: 18px;
+}
