--- a/src/app/components/user/profile/watch/profile.watch.component.html
+++ b/src/app/components/user/profile/watch/profile.watch.component.html
@@ -10,9 +10,7 @@
         </figure>
 
         <div class="card-content">
-          <div class="row">
-
-          </div>
+          <medal-module [user]="user"></medal-module>
         </div>
       </div>
       <div id="profile-page-content" class="row">
@@ -40,6 +38,12 @@
             </div>
           </div>
         </div>
+      </div>
+      <div id="instructions">
+        <h2 class="teaser">
+          <span>{{"INSTRUCTIONS" | translate}}</span>
+        </h2>
+        <instruction-module [instructions]="this.instructions" [withSort]="true"></instruction-module>
       </div>
     </div>
   </section>
