--- a/src/app/components/common/upload/upload.component.html
+++ b/src/app/components/common/upload/upload.component.html
@@ -1,4 +1,4 @@
-<cl-image public-id="{{part.data}}" width="700"
+<cl-image id="part_img" public-id="{{part.data}}" width="700"
           [cloud-name]="uploader.cloudName">
 </cl-image>
 <div class="file-field input-field">
