--- a/src/app/components/instruction/update/instruction.update.component.html
+++ b/src/app/components/instruction/update/instruction.update.component.html
@@ -1,12 +1,14 @@
 <div class="wrapper">
   <section id="container">
-    <div>
-      <div class="right">
-        <a class="waves-effect waves-light btn center-align red" (click)="deleteInstruction()">{{"DELETE_INSTRUCTION" |
+    <div class="row">
+      <div class="col s12 m3"></div>
+      <div class="center-align col s12 m6">
+        <a class="waves-effect waves-light btn green" [routerLink]="['../../watch/', instruction.id]">{{"PREVIEW" |
           translate}}</a>
       </div>
-      <div class="center-align">
-        <a class="waves-effect waves-light btn green" [routerLink]="['../../watch/', instruction.id]">{{"PREVIEW" |
+      <div class="right col s12 m3">
+        <a class="waves-effect waves-light btn center-align red" (click)="deleteInstruction()">{{"DELETE_INSTRUCTION"
+          |
           translate}}</a>
       </div>
     </div>
@@ -39,7 +41,7 @@
             translate}}</a>
         </div>
 
-        <pagination-controls class="center" (pageChange)="p = $event"></pagination-controls>
+        <pagination-controls class="center" (pageChange)="p = $event" autoHide="true"></pagination-controls>
         <ul id="steps">
           <li class="row center" style="width: 95%"
               *ngFor="let step of this.instruction.steps | paginate: { itemsPerPage: 1, currentPage: p }">
@@ -82,7 +84,7 @@
             </ul>
           </li>
         </ul>
-        <pagination-controls class="center" (pageChange)="p = $event"></pagination-controls>
+        <pagination-controls class="center" (pageChange)="p = $event" autoHide="true"></pagination-controls>
       </div>
     </div>
   </section>
