Add instructions component + hot fix collapsable

--- a/src/app/components/common/navigation/navigation.component.html
+++ b/src/app/components/common/navigation/navigation.component.html
@@ -74,15 +74,14 @@
     </li>
 
     <!--Admin component-->
-    <li class="hoverable no-padding"  *ngIf="isAdmin">
+    <li class="hoverable no-padding" >
       <ul class="collapsible" data-collapsible="accordion">
-        <li class="bold">
+        <li class="bold" *ngIf="isAdmin">
           <a class="collapsible-header waves-effect waves-cyan">{{"ADMIN" | translate}}</a>
           <div class="collapsible-body" style="display: block;">
             <ul>
-              <li class="hoverable" *ngIf="isAdmin"><a [routerLink]="['admin/users']">{{"USERS" | translate}}</a></li>
-              <li class="hoverable" *ngIf="isAdmin"><a [routerLink]="['admin/manage']">{{"MANAGEMENT" | translate}}</a>
-              </li>
+              <li class="hoverable"><a [routerLink]="['admin/users']">{{"USERS" | translate}}</a></li>
+              <li class="hoverable"><a [routerLink]="['admin/manage']">{{"MANAGEMENT" | translate}}</a></li>
             </ul>
           </div>
         </li>
@@ -91,6 +90,9 @@
 
     <!--Users-->
     <li class="hoverable"><a [routerLink]="['users']">{{"USERS" | translate}}</a></li>
+
+    <!--Instructions-->
+    <li class="hoverable"><a [routerLink]="['instructions']">{{"INSTRUCTIONS" | translate}}</a></li>
 
     <!--logout (should be the last!)-->
     <li class="hoverable" [hidden]="!isLoggedIn"><a (click)="logout()">{{"LOGOUT" | translate}}</a></li>
